concord_examples/tests/ui/removed_cx_auth_aliases.stderr
error: `cx.*` was removed in v2; use `vars.*`
  --> tests/ui/removed_cx_auth_aliases.rs:14:26
   |
14 |             "x-tenant" = cx.tenant,
   |                          ^^
